fixed spacing under the last message

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -42,7 +42,7 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  padding-bottom: 55px;
+  padding-bottom: 70px;
 }
 #messages > li {
   padding: 10px 30px;
